# soci-devcontainer

./: CMakeLists.txt  README.md  main.cpp  terminalColors.hpp
.devcontainer/: Dockerfile  devcontainer.json
